[gd_scene load_steps=12 format=2]

[ext_resource path="res://Utils/Sound/SoundManager.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sounds/Music/Ogham OST - _Into the forest_256kBit.mp3" type="AudioStream" id=2]
[ext_resource path="res://Assets/Sounds/UI/button_click.mp3" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sounds/InGame/play_card.mp3" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sounds/InGame/draw_growth_card.mp3" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sounds/InGame/attack_card.mp3" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sounds/InGame/defeat_card.mp3" type="AudioStream" id=7]
[ext_resource path="res://Utils/Sound/Sound.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Sounds/InGame/draw_active_card.mp3" type="AudioStream" id=9]
[ext_resource path="res://Assets/Sounds/InGame/victory.mp3" type="AudioStream" id=10]
[ext_resource path="res://Assets/Sounds/InGame/gain_mana.mp3" type="AudioStream" id=11]

[node name="SoundManager" type="Node"]
script = ExtResource( 1 )

[node name="MainTheme" parent="." instance=ExtResource( 8 )]
stream = ExtResource( 2 )

[node name="DrawActiveCard" parent="." instance=ExtResource( 8 )]
stream = ExtResource( 9 )
volume_db = 15.0

[node name="DrawGrowthCard" parent="." instance=ExtResource( 8 )]
stream = ExtResource( 5 )

[node name="PlayCard" parent="." instance=ExtResource( 8 )]
stream = ExtResource( 4 )

[node name="AttackCard" parent="." instance=ExtResource( 8 )]
stream = ExtResource( 6 )

[node name="DefeatCard" parent="." instance=ExtResource( 8 )]
stream = ExtResource( 7 )

[node name="Victory" parent="." instance=ExtResource( 8 )]
stream = ExtResource( 10 )
volume_db = -3.0

[node name="GainMana" parent="." instance=ExtResource( 8 )]
stream = ExtResource( 11 )
volume_db = -15.0

[node name="ButtonClick" parent="." instance=ExtResource( 8 )]
stream = ExtResource( 3 )
volume_db = -5.0
