extends Node

#==== Music ====#


#==== Sounds ====#
onready var _main_theme = $MainTheme

onready var _draw_active_card = $DrawActiveCard
onready var _draw_growth_card = $DrawGrowthCard
onready var _play_card = $PlayCard
onready var _attack_card = $AttackCard
onready var _defeat_card = $DefeatCard
onready var _victory = $Victory
onready var _gain_mana = $GainMana

onready var _button_click = $ButtonClick



